# vs-code-projects-nexus-laptop

./: .gitignore  .gitignore.backup  README.md  add_commit_output.txt  add_errors.txt  add_force_after_move.txt  add_force_after_unlock_verbose.txt  add_force_final_verbose.txt  add_output.txt  add_output3.txt  add_partial_output.txt  add_push_output.txt  add_status_after_add.txt  compress_output.txt  status_all.txt
2xkoshit/: IMAGES_GUIDE.md  (+12 more)
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/: .bandit  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  01_MASTER_GETTING_STARTED.md  02_MASTER_ARCHITECTURE.md  03_MASTER_IMPLEMENTATION.md  04_MASTER_PRODUCTION.md  05_MASTER_TESTING_QA.md  06_MASTER_DEVELOPMENT.md  07_MASTER_DASHBOARD.md  08_MASTER_ADVANCED.md  API_DOCUMENTATION.md  ARCHITECTURE_GUIDE.md  CODEOWNERS  CONSOLIDATION_SUMMARY.json  CONTRIBUTING.md  DEMO_DECK.ipynb  DEVELOPER_SETUP_GUIDE.md  Dockerfile  Dockerfile.app  GEESP-Angola.spec  LICENSE  Makefile  PROJECT_STATUS_DASHBOARD.md  README.md  TEST_SUITE_FINAL_STATUS.md  _path_setup.py  build_windows_app.py  docker-compose-production.yml  docker-compose.monitoring.yml  docker-compose.yml  launch_app.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lock.txt  requirements.txt  run_all_tests.bat  (+6 more)
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/.github/workflows/: production-pipeline.yml
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/.streamlit/: config.toml
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/ARCHIVED_MERGES/: find_orphaned_imports.py  import_migration_analyzer.py  phase2b_import_updater.py  phase3a_r_results_20260228_165352.json  phase3a_results_20260228_164607.json
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/ARCHIVED_MERGES/nevermindu_backup_20260307/: GEESP-Angola-API.postman_collection.json  SECURITY_IMPLEMENTATION.md  TIER1_COMPLETION_REPORT.md  package.json  server.ts
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/backend/: .env.example  __init__.py  app.py  wsgi.py
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/backend/analysis/: __init__.py  base.py  lcoe.py  mcda.py  validation_base.py
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/backend/api/: __init__.py  api.py  models.py
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/backend/core/: config.py
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/backend/dashboard/: __init__.py  app.py  components.py  pages.py  state.py
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/backend/database/: __init__.py  models.py  session.py
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/backend/geospatial/: __init__.py  earth_engine_integration.py  operations.py  raster.py
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/backend/integration/: performance_benchmark.py
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/backend/maps/: __init__.py  exporters.py  generator.py
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/backend/migrations/: env.py
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/backend/models/: __init__.py
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/backend/scripts/: __init__.py  api_server.py  base.py  config_loader.py  data_loaders_async.py  db_init_backup.sh  gee_extraction.py  generate_maps_simple.py  lcoe_calculator.py  map_utils.py  mcda_analysis.py  performance.py  raster_utils.py  utils.py  validation_pipeline.py  validators.py
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/backend/tests/: __init__.py  _path_setup.py  conftest.py  run_gee_tests.py  test_api_endpoints.py  test_functional.py  test_lcoe_calculator.py
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/docs/: API.md  INSTALL.md  METODOLOGIA.md  USAGE.md
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/frontend/: .env.example  README.md  package.json  validate-build.js  validate-phase-e.bat  vite.config.ts
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/k8s/: k8s-setup.sh
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/monitoring/: monitoring_app.py
Full project-20260219T174551Z-1-001 - Cópia/code_unified/app_codebase/geesp-angola/notebooks/: demo_mcda.ipynb
MIT/mit science paper/Full project/02_Code/geesp-angola/: .gitignore  .pre-commit-config.yaml  DASHBOARD_ARCHITECTURE_DIAGRAMS.md  DASHBOARD_COMPONENT_REFERENCE.md  DASHBOARD_MODULAR_QUICKSTART.md  Dockerfile  Dockerfile.root  IMPROVEMENTS_ROADMAP.md  LOVABLE_DASHBOARD_PROMPT.md  LOVABLE_DASHBOARD_REACT_PROMPT.md  PROJECT_STRUCTURE.md  README.md  geesp-unified-app.py  launch_app.bat  pyproject.toml  run_dashboard.bat  run_dashboard.sh  verify_integration.py
(+45986 files in other folders)
