[project]
name = "geesp-angola"
version = "1.0.0"
description = "GEESP-Angola: Geospatial Energy for Equity & Solar Planning Analysis"
authors = [
    { name = "Rocélio Da Silva", email = "rocelio@isptec.ao" },
    { name = "Alexandre Dos Santos", email = "alexandre@isptec.ao" },
    { name = "Delfina Mpanka", email = "delfina@isptec.ao" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["energy", "solar", "geospatial", "gis", "angola", "mcda", "lcoe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "streamlit>=1.30.0",
    "geopandas>=0.9.0",
    "rasterio>=1.2.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "folium>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "flake8>=7.0",
    "isort>=5.0",
    "mypy>=1.0",
    "jupyter>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/ISPTEC-Energy/geesp-angola"
"Bug Tracker" = "https://github.com/ISPTEC-Energy/geesp-angola/issues"
"Documentation" = "https://github.com/ISPTEC-Energy/geesp-angola/wiki"
"Source Code" = "https://github.com/ISPTEC-Energy/geesp-angola"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["ARCHIVE", "archive", "*_frozen", "legacy_unused", "useless"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --disable-warnings"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
branch = true
source = ["scripts", "dashboard", "monitoring"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "W0212",  # Protected access
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

