[package]
name = "petrolumen-desktop"
version = "0.1.0"
description = "Aplicativo desktop PetroLúmen"
authors = ["you"]
license = ""
repository = ""
default-run = "petrolumen-desktop"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["config-toml"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
